--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,1 +1,18 @@
 
+version: 2.1
+
+orbs:
+  node: circleci/node@4.1.0
+
+jobs: 
+
+  build:
+    docker:
+      - image: circleci/openjdk:stretch
+    steps:
+      - checkout
+      - run:
+          name: Giving permissions
+          command: chmod +x mnvm
+      - run:
+          command: ./mvnw -Dmaven.test.skip=true package
